--- a/src/App.css
+++ b/src/App.css
@@ -89,15 +89,19 @@ table {
 nav {
   height: 10vh;
   background-color: rgb(88, 140, 238);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav-user-info-container {
   height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: space-evenly;
   margin-left: 1rem;
+  width: 50%;
 }
 
 .nav-user-display {
@@ -111,5 +115,21 @@ nav {
   height: 1.5rem;
   width: 4.5rem;
   background: white;
-  
+}
+
+.nav-timer {
+  margin-right: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 50%;
+  height: 100%;
+}
+
+.nav-start-timer-btn {
+  border: none;
+  border-radius: 5px;
+  height: 1.5rem;
+  background: white;
 }
