--- a/src/App.css
+++ b/src/App.css
@@ -169,6 +169,7 @@ nav {
 }
 
 .nav-num-characters-btn {
+  color: white;
   background-color: #ee9f27;
   padding: 0.7rem;
   border-radius: 20px;
@@ -176,6 +177,10 @@ nav {
   border: none;
   height: 3rem;
   width: 3rem;
+}
+
+.us-orange {
+  color: #ee9f27;
 }
 
 /* -------------- MAIN STYLES -------------- */
@@ -250,10 +255,19 @@ nav {
   position: absolute;
   left: 40px;
   border-radius: 10px;
+  gap: 20px;
+  padding-top: 0.7rem;
 }
+
+.dropdown-character-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  margin-right: 0.5rem;
+}
+
 .dropdown-character-img {
   width: 100px;
   height: 100px;
-  margin-right: 2rem;
-  /* background-color: white; */
 }
